--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 
 body{
   background:black;
+  color:white;
+  font-family:'Courier New', Courier, monospace;
   
 }
 h1{
@@ -35,4 +37,15 @@ h1{
 
 .bullet{
   background:yellow;
+}
+
+.gameover{
+  visibility: hidden;
+  font-size:2em;
+  text-align:center;
+}
+
+.score{
+  font-size:2em;
+  text-align:center;
 }
